Closed Bug 114339 Opened 23 years ago Closed 23 years ago

Mozilla fail to paste correctly into password fields

Categories

(Core :: DOM: Editor, defect, P3)

defect

Tracking

()

VERIFIED FIXED
mozilla0.9.7

People

(Reporter: joakim_46, Assigned: kinmoz)

References

Details

(Whiteboard: [EDITORBASE] [CANDIDATE_094] fixed on trunk)

Attachments

(1 file, 1 obsolete file)

From Bugzilla Helper: User-Agent: Mozilla/5.0 (Windows; U; Win 9x 4.90; en-US; rv:0.9.6) Gecko/20011120 BuildID: 2001112009 Mozilla 0.9.6 pastes incorrect passwords using Ctrl+C to copy and Ctrl+V to paste. I have to type the password manualy. Reproducible: Always Steps to Reproduce: 1. Go to a page that needs password 2. Copy the password from a file using Ctrl+C 3. Paste the password in the filed using Ctrl+V Actual Results: The password is wrong Expected Results: The password should be correctly pasted.
Confirmed using Fizzilla/2001120608. Marking All/All.
Status: UNCONFIRMED → NEW
Component: Layout → HTML Form Controls
Ever confirmed: true
OS: Windows ME → All
Hardware: PC → All
I'm confirming this on WinME 2001120908. I tried both slashdot and my.yahoo logins. Pasting a password from windows clipboard into the password field doesn't work. I verified that the clipboard had the correct password by pasting into the login field, it was correct. I noticed that after pasting (with ctrl-v or Edit/Paste) in the password field there was one more * than expected.
Further investigation (sniffing with Ethereal) shows that the password had a \r\n added to the end. I was copying from a DOS window. If I copy from a notepad window then it works. Interestingly if you paste in the plain textfield the newlines are stripped.
->DOM to Text conversion
Assignee: attinasi → harishd
Component: HTML Form Controls → DOM to Text Conversion
QA Contact: petersen → sujay
um... no, this is the other direction. text to DOM. Editor...
Assignee: harishd → kin
Component: DOM to Text Conversion → Editor: Core
Status: NEW → ASSIGNED
Priority: -- → P3
Whiteboard: [EDITORBASE] FIX IN HAND, need r= and sr=
Target Milestone: --- → mozilla0.9.7
Attached patch Patch Rev 1 (obsolete) — Splinter Review
Call EchoInsertionToPWBuff() after we filter based on the editor.singleLine.pasteNewlines pref.
Blocks: 108120
Attachment #61099 - Attachment is obsolete: true
Comment on attachment 61107 [details] [diff] [review] Patch Rev 1.1 (Removing more repetitive code.) r=brade
Attachment #61107 - Flags: review+
Fix summary
Summary: Mozilla fails pastes incorrect passwords → Mozilla fail to paste correctly into password fields
Comment on attachment 61107 [details] [diff] [review] Patch Rev 1.1 (Removing more repetitive code.) sr=sfraser
Attachment #61107 - Flags: superreview+
Whiteboard: [EDITORBASE] FIX IN HAND, need r= and sr= → [EDITORBASE] FIX IN HAND, ready for checkin
Fix checked in on TRUNK: mozilla/editor/libeditor/text/nsTextEditRules.cpp revision 1.159
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Whiteboard: [EDITORBASE] FIX IN HAND, ready for checkin → [EDITORBASE] [CANDIDATE_094] fixed on trunk
can you test the input from mozilla again in 12-13 build.. see bug 115019 to help us find a solution.
not sure if checking is needed, bug 115019 seems like its related to PSM and Master Password saving and correctness.
this has been working fine for some time. :)
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: