Fix for bug 114339: Mozilla fails to paste correctly into password fields

Modified WillInsertText() to call EchoInsertionToPWBuff() after
the code that filters newlines based on the editor.singleLine.pasteNewlines
pref.

r=brade@netscape.com  sr=sfraser@netscape.com